created all the data binding to the view model (every view element is binded to a view model's member)

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,8 +2,10 @@
 <resources>
     <declare-styleable name="Joystick">
         <!-- attributes go here -->
-        <attr name="x" format="float" />
-        <attr name="y" format="float" />
+        <attr name="f_x" format="float" />
+        <attr name="x" format="string" />
+        <attr name="f_y" format="float" />
+        <attr name="y" format="string" />
         <attr name="color" format="color" />
     </declare-styleable>
 </resources>
