--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout xmlns:tools="http://schemas.android.com/tools"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+
+<data>
+    <variable
+            name="vm"
+            type="com.example.ap2_3.view_model.FlightControlViewModel"/>
+    <variable
+            name="view"
+            type="com.example.ap2_3.views.MainActivity"/>
+</data>
+
+<androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".views.MainActivity"
+        android:layout_gravity="right"
         android:background="@color/black">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
+    <SeekBar
+            android:id="@+id/sbThrottle"
+            style="@android:style/Widget.DeviceDefault.SeekBar"
+            android:layout_width="500dp"
+            android:layout_height="419dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginEnd="310dp"
+            android:rotation="90"
+            android:scrollY="200dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:progress="@={vm.throttle}"
+            android:layout_marginRight="320dp"
+            android:max="1000"
+            />
+
+    <EditText
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_width="300px"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:ems="10"
+            android:hint="IP Address"
+            android:textColorHint="@color/white"
+            android:background="@color/main"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:id="@+id/ip"
+            android:layout_marginTop="12dp"
+            android:layout_marginLeft="24dp"
+            android:gravity="center_horizontal"
+            android:text="@={vm.ip}"
+            />
+
+    <EditText
+            android:textColorHint="@color/white"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="300px"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:hint="Port"
+            app:layout_goneMarginTop="10px"
+            android:background="@color/main"
+            android:textColor="@color/white"
+            android:layout_marginRight="148dp"
+            android:textAlignment="center"
+            android:id="@+id/port"
+            android:text="@={vm.port}"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="12dp"
+            />
+
+    <Button
+            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:text="Connect"
+            android:id="@+id/connectBtn"
+            app:layout_goneMarginTop="5px"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:textColor="@color/white"
-    />
+            app:layout_constraintHorizontal_bias="0.878"
+            android:layout_marginTop="4dp"
+            />
 
     <com.example.ap2_3.views.Joystick
-            android:layout_width="700px"
-            android:layout_height="700px"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="132dp"
+            android:id="@+id/joystick"
+            android:layout_width="299dp"
+            android:layout_height="436dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="100dp"
+            app:x="@={vm.x}"
+            app:y="@={vm.y}"
+            />
+
+    <SeekBar
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-    />
+            app:layout_constraintTop_toBottomOf="@+id/joystick"
+            android:id="@+id/rudderBar"
+            android:outlineAmbientShadowColor="@color/white"
+            android:outlineSpotShadowColor="@color/white"
+            android:layout_width="292dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintHorizontal_bias="0.865"
+            android:progress="@={vm.rudder}"
+            android:max="1000"
+            />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
